spacing fix

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
 .project {
     max-width: 600px;
     width: 100%;
-    padding-bottom: 40px;
+    padding-bottom: 18px;
 }
 
 .greycontainer, .greycontainer-id {
@@ -47,7 +47,7 @@ body {
 }
 
 .right-container {
-    padding-top: 60px;
+    padding-top: 54px;
     padding-left: 480px;
 }
 
@@ -58,7 +58,7 @@ body {
 }
 
 .paragraph {
-    padding-bottom: 18px;
+    padding-bottom: 12px;
     text-align: justify;
     color: grey;
 }
